[tool.poetry]
name = "magichat"
version = "0.1.0"
description = "Funsies"
authors = ["Ethan <ethan.lee.zhu@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"


[project.urls]
repository = "https://github.com/PiethonProgram/MagicHatPKG"
issues = "https://github.com/PiethonProgram/MagicHatPKG/issues"


[tool.poetry.dependencies]
python = "^3.12"


[build-system]'
